# llm-observability

./: Dockerfile  README 2.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
configs/: alerting_rules.yaml  otel-collector.yaml
scripts/: load_test.py
src/api/: main.py  routes.py
src/collectors/: __init__.py  anthropic_collector.py  langchain_collector.py  llm_instrumentor.py  openai_collector.py
src/exporters/: __init__.py  cost_estimator.py
tests/: test_instrumentor.py
